syntax = "proto3";

package castletown;

option go_package = "github.com/joshjms/castletown/proto";

// File represents a file to be created in the sandbox
message File {
  string name = 1;
  string content = 2;
}

// Process represents a single execution step
message Process {
  string image = 1;
  repeated string cmd = 2;
  string stdin = 3;
  int64 memory_limit_mb = 4;
  uint64 time_limit_ms = 5;
  int64 proc_limit = 6;
  repeated string files = 7;
  repeated string persist = 8;
}

// Report contains the execution results
message Report {
  Status status = 1;
  int32 exit_code = 2;
  int32 signal = 3;
  string stdout = 4;
  string stderr = 5;
  uint64 cpu_time = 6;
  uint64 memory = 7;
  int64 wall_time = 8;
  int64 start_at = 9;  // Unix timestamp in nanoseconds
  int64 finish_at = 10; // Unix timestamp in nanoseconds
}

// Status represents the execution status
enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_OK = 1;
  STATUS_RUNTIME_ERROR = 2;
  STATUS_TIME_LIMIT_EXCEEDED = 3;
  STATUS_MEMORY_LIMIT_EXCEEDED = 4;
  STATUS_OUTPUT_LIMIT_EXCEEDED = 5;
  STATUS_TERMINATED = 6;
  STATUS_UNKNOWN = 7;
  STATUS_SKIPPED = 8;
}
